Add privacy-safe Space events (#54)
